configure idea project using extended DSL